[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/ui/menus/choose-join-local/PopupIpAdress.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://src/ui/menus/choose-join-local/chooseJoinLocal.gd" type="Script" id=3]
[ext_resource path="res://assets/themes/fonts/large.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/themes/fonts/small.tres" type="DynamicFont" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.796078 )

[sub_resource type="StyleBoxFlat" id=2]
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="ChooseJoinLocal" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -1027.7, -65.7233 )
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 109.0

[node name="Label" type="Label" parent="HBoxContainer"]
margin_right = 578.0
margin_bottom = 109.0
custom_fonts/font = ExtResource( 4 )
text = "SchoolBoyBattle"

[node name="GridContainer" type="HBoxContainer" parent="."]
margin_top = 129.0
margin_right = 1280.0
margin_bottom = 610.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="GridContainer"]
margin_right = 436.0
margin_bottom = 481.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.53

[node name="Label" type="Label" parent="GridContainer/VBoxContainer"]
margin_right = 436.0
margin_bottom = 70.0
text = "Réseau local"
autowrap = true

[node name="VBoxContainer2" type="VBoxContainer" parent="GridContainer"]
margin_left = 456.0
margin_right = 1280.0
margin_bottom = 481.0
size_flags_horizontal = 3

[node name="ButtonJoinOpenPopup" type="Button" parent="GridContainer/VBoxContainer2"]
margin_right = 824.0
margin_bottom = 90.0
size_flags_horizontal = 3
text = "Rejoindre un serveur"

[node name="ButtonCreateServer" type="Button" parent="GridContainer/VBoxContainer2"]
margin_top = 110.0
margin_right = 824.0
margin_bottom = 200.0
size_flags_horizontal = 3
text = "Créer un serveur"

[node name="ButtonHostOnly" type="Button" parent="GridContainer/VBoxContainer2"]
margin_top = 220.0
margin_right = 824.0
margin_bottom = 310.0
size_flags_horizontal = 3
text = "Serveur uniquement"

[node name="ButtonBack" type="Button" parent="."]
margin_top = 630.0
margin_right = 235.0
margin_bottom = 720.0
size_flags_horizontal = 0
text = "Retour"

[node name="PopupIpAdress" type="Popup" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="PopupIpAdress"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PopupIpAdress"]
anchor_right = 1.0
margin_left = 76.0
margin_top = 85.0
margin_right = -77.0
margin_bottom = 251.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="PopupIpAdress/VBoxContainer"]
margin_right = 1127.0
margin_bottom = 76.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonClosePopup" type="Button" parent="PopupIpAdress/VBoxContainer/HBoxContainer"]
margin_right = 151.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 5 )
text = "Fermer"

[node name="Label" type="Label" parent="PopupIpAdress/VBoxContainer/HBoxContainer"]
margin_left = 171.0
margin_top = 3.0
margin_right = 417.0
margin_bottom = 73.0
text = "Adresse IP :"

[node name="LineEdit" type="LineEdit" parent="PopupIpAdress/VBoxContainer/HBoxContainer"]
margin_left = 437.0
margin_right = 931.0
margin_bottom = 76.0
size_flags_horizontal = 3
custom_styles/normal = SubResource( 2 )
text = "127.0.0.1"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonJoinServer" type="Button" parent="PopupIpAdress/VBoxContainer/HBoxContainer"]
margin_left = 951.0
margin_right = 1127.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 5 )
text = "Rejoindre"

[node name="Error" type="Label" parent="PopupIpAdress/VBoxContainer"]
margin_top = 96.0
margin_right = 1127.0
margin_bottom = 128.0
custom_fonts/font = ExtResource( 5 )

[connection signal="pressed" from="GridContainer/VBoxContainer2/ButtonJoinOpenPopup" to="." method="_on_ButtonOpenPopup_pressed"]
[connection signal="pressed" from="GridContainer/VBoxContainer2/ButtonCreateServer" to="." method="_on_ButtonCreateServer_pressed"]
[connection signal="pressed" from="GridContainer/VBoxContainer2/ButtonHostOnly" to="." method="_on_ButtonHostOnly_pressed"]
[connection signal="pressed" from="ButtonBack" to="." method="_on_ButtonBack_pressed"]
[connection signal="pressed" from="PopupIpAdress/VBoxContainer/HBoxContainer/ButtonClosePopup" to="PopupIpAdress" method="_on_ButtonClosePopup_pressed"]
[connection signal="pressed" from="PopupIpAdress/VBoxContainer/HBoxContainer/ButtonJoinServer" to="." method="_on_ButtonJoinServer_pressed"]
